--- a/dk-consulting/src/style/style.css
+++ b/dk-consulting/src/style/style.css
@@ -1,3 +1,6 @@
+@import url("_vars.scss");
+@import url("_mixins.scss");
+@import url("../components/AboutPromo/_aboutPromo.scss");
 * {
   margin: 0;
   padding: 0;
