--- a/dk-consulting/src/style/style.scss
+++ b/dk-consulting/src/style/style.scss
@@ -12,3 +12,7 @@
 }
 
 @import url("../components/AboutPromo/_aboutPromo.scss");
+@import url("../components/MainPromo/_mainPromo.scss");
+@import url("../components/MainConsult/_mainConsult.scss");
+@import url("../components/MainLean/_mainLean.scss");
+@import url("../components/MainServices/_mainServices.scss");
