--- a/dk-consulting/src/components/AboutPromo/_aboutPromo.scss
+++ b/dk-consulting/src/components/AboutPromo/_aboutPromo.scss
@@ -2,10 +2,15 @@
     height: 910px;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: linear-gradient(89.89deg, #090A20 0.11%, rgba(6, 8, 43, 0.91) 42.09%, rgba(7, 9, 62, 0.08) 109.63%), url("../../assets/About/about_bg.png");
+    background-image: linear-gradient(89.89deg, #090A20 0.11%, rgba(6, 8, 43, 0.91) 42.09%, rgba(7, 9, 62, 0.08) 109.63%), 
+    url("../assets/About/about_bg.png");
     &__wrap {
         width: calc(50% - 90px);
         background-color: #090A20;
         height: 100%;
+
+        & h1 {
+            color: #fff;
+        }
     }
 }
