--- a/dk-consulting/src/style/style.css
+++ b/dk-consulting/src/style/style.css
@@ -1,18 +1,132 @@
-@import url("_vars.scss");
-@import url("_mixins.scss");
-@import url("../components/AboutPromo/_aboutPromo.scss");
-@import url("../components/MainPromo/_mainPromo.scss");
-@import url("../components/MainConsult/_mainConsult.scss");
-@import url("../components/MainLean/_mainLean.scss");
-@import url("../components/MainServices/_mainServices.scss");
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .wrapper {
   margin: 0 auto;
 }
-/*# sourceMappingURL=style.css.map */
+
+.about-promo {
+  height: 910px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: linear-gradient(89.89deg, #090A20 0.11%, rgba(6, 8, 43, 0.91) 42.09%, rgba(7, 9, 62, 0.08) 109.63%), url("../assets/About/about_bg.png");
+}
+.about-promo__wrap {
+  width: calc(50% - 90px);
+  background-color: #090A20;
+  height: 100%;
+}
+.about-promo__wrap h1 {
+  color: #fff;
+}
+
+.main__promo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 910px;
+}
+
+.main-info-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 1000px;
+}
+
+.main-info__left {
+  max-width: 360px;
+}
+
+.main-info__right {
+  max-width: 360px;
+  text-align: right;
+}
+
+.percents {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.main-consult {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 1440px;
+  padding: 23px 75px 75px 23px;
+}
+
+.main-consult-cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.main-consult-card {
+  width: 630px;
+  background: #FFFFFF;
+  box-shadow: 4px 4px 10px rgba(32, 42, 62, 0.13), inset 2px 2px 4px #3B4861;
+  border-radius: 5px;
+  height: 291px;
+  padding: 15px 15px 15px 40px;
+}
+
+.main-card-heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 268px;
+}
+
+.main-lean {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 1440px;
+  padding: 23px 75px 75px 23px;
+}
+
+.main-lean-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.main-services {
+  min-width: 1440px;
+  padding: 43px 77px 77px 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-services-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.main-services-list-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 310px;
+}
+
+.main-services-caption {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}/*# sourceMappingURL=style.css.map */
