--- a/dk-consulting/src/style/_mixins.scss
+++ b/dk-consulting/src/style/_mixins.scss
@@ -1,4 +1,5 @@
 @mixin font($font-weight, $font-size, $line-height, $color) {
+    font-family: 'Roboto', sans-serif;
     font-weight: $font-weight;
     font-size: $font-size;
     line-height: $line-height;
