added cards from aboutpage and font

--- a/dk-consulting/src/input.css
+++ b/dk-consulting/src/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 @layer components {
     .bluebtn {
       @apply w-[307px] rounded-[8px] text-[16px] py-[22px] border-0 bg-blue hover:bg-darkblue active:bg-darkblue;
