--- a/dk-consulting/src/input.css
+++ b/dk-consulting/src/input.css
@@ -11,7 +11,7 @@ body {
       @apply text-white uppercase w-[307px] rounded-[8px] text-[16px] py-[22px] border-0 bg-blue hover:bg-darkblue active:bg-darkblue;
     }
     .transbtn {
-      @apply text-white uppercase w-[303px] rounded-[8px] text-[16px] py-[21px] border-2 border-lightgrey border-solid bg-[#fdfdfd] hover:bg-darkblue active:bg-darkblue;
+      @apply text-white uppercase w-[303px] rounded-[8px] text-[16px] py-[21px] border-2 border-lightgrey border-solid bg-[#D9D9D90A] hover:bg-blue hover:border-blue active:bg-darkblue active:border-darkblue;
     }
     .bigTitle {
       @apply uppercase text-[40px] font-extralight leading-[56px];
