--- a/dk-consulting/src/input.css
+++ b/dk-consulting/src/input.css
@@ -11,7 +11,7 @@ body {
       @apply text-white uppercase w-[307px] rounded-[8px] text-[16px] py-[22px] border-0 bg-blue hover:bg-darkblue active:bg-darkblue;
     }
     .transbtn {
-      @apply text-white uppercase w-[303px] rounded-[8px] text-[16px] py-[21px] border-2 border-lightgrey border-solid bg-[#D9D9D90A] hover:bg-blue hover:border-blue active:bg-darkblue active:border-darkblue;
+      @apply text-white uppercase w-[303px] rounded-[8px] text-[16px] py-[21px] border-2 border-lightgrey border-solid bg-[#D9D9D90A] backdrop-blur hover:bg-blue hover:border-blue active:bg-darkblue active:border-darkblue;
     }
     .bigTitle {
       @apply uppercase text-[40px] font-extralight leading-[56px];
@@ -21,5 +21,21 @@ body {
     }
     .par {
       @apply text-[22px] font-light leading-[29px];
+    }
+
+    .bluebtnlg {
+      @apply text-white uppercase w-[276px] rounded-[8px] text-[14px] py-[15px] border-0 bg-blue hover:bg-darkblue active:bg-darkblue;
+    }
+    .transbtnlg {
+      @apply text-white uppercase w-[275px] rounded-[8px] text-[14px] py-[15px] border-2 border-lightgrey border-solid bg-[#D9D9D90A] backdrop-blur hover:bg-blue hover:border-blue active:bg-darkblue active:border-darkblue;
+    }
+    .bigTitlelg {
+      @apply uppercase text-[36px] font-extralight leading-[50px];
+    }
+    .littleTitlelg {
+      @apply text-[22px] font-normal leading-[30px];
+    }
+    .parlg {
+      @apply text-[18px] font-light leading-[24px];
     }
 }
